# evm_cuda

./: .gitignore  AI-DIARY.md  CLAUDE.md  COMPREHENSIVE_EVM_CUDA_REPORT.md  Dockerfile  README.AI.md  README.AI.md.template  README.md  benchmark_test.sh  code_instructions.md  cpu_gaussian_pipeline_analysis.md  vidmag.md
comparison_outputs/: comparison_metrics.csv
cpp/: CMakeLists.txt
cpp/include/: butterworth.hpp  color_conversion.hpp  gaussian_pyramid.hpp  laplacian_pyramid.hpp  processing.hpp  pyramid.hpp  temporal_filter.hpp
cpp/src/: butterworth.cpp  color_conversion.cpp  gaussian_pyramid.cpp  laplacian_pyramid.cpp  main.cpp  processing.cpp  pyramid.cpp  temporal_filter.cpp
cpp/tests/: test_butterworth.cpp  test_cpu_color.cpp  test_cpu_pyramid.cpp  test_cpu_temporal.cpp  test_gaussian.cpp  test_helpers.cpp  test_helpers.hpp  test_laplacian.cpp  test_processing.cpp
cpp/tests/data/: butter_high_a.txt  frame_1_filtered_level_2.txt  frame_2_laplacian_level_3.txt  frame_3_laplacian_level_2.txt  frame_4_filtered_level_2.txt  frame_4_filtered_level_3.txt  frame_4_laplacian_level_2.txt  frame_4_laplacian_level_3.txt
cuda/: CMakeLists.txt  CUDA_BUTTERWORTH_STARTUP_TRANSIENT_ANALYSIS.md  CUDA_EVM_DIARY.md  Makefile  README.md  analyze_cpu_vs_hybrid_psnr.py  analyze_frame_psnr.py  analyze_frames.py  analyze_gaussian_psnr.py  analyze_hybrid_vs_cpu_psnr.py  detailed_gaussian_analysis.py  frame_psnr_analysis.txt  measure_hybrid_psnr.py  parameter_comparison.md  psnr_analysis_with_figures.py  regenerated_analysis_summary.md  test_cuda_butter_cpu_rest_fixed.cu  test_cuda_color_cuda_butter_working_impl.cu  test_cuda_gaussian_cpu_hybrid.cu  test_cuda_gaussian_full.cu  test_cuda_gaussian_hybrid.cu  test_cuda_gaussian_pyramid.cu
cuda/include/: cuda_butterworth.cuh  cuda_color_conversion.cuh  cuda_evm.cuh  cuda_format_conversion.cuh  cuda_gaussian_processing.cuh  cuda_gaussian_pyramid.cuh  cuda_laplacian_pyramid.cuh  cuda_processing.cuh  cuda_pyramid.cuh  cuda_scaling.cuh  cuda_temporal_filter.cuh  cuda_transpose.cuh  gaussian_pyramid_cuda.hpp
cuda/src/: cuda_butterworth.cu  cuda_color_conversion.cu  cuda_evm.cu  cuda_format_conversion.cu  cuda_gaussian_processing.cu  cuda_gaussian_pyramid.cu  cuda_laplacian_pyramid.cu  cuda_processing.cu  cuda_pyramid.cu  cuda_scaling.cu  cuda_temporal_filter.cu  cuda_transpose.cu  gaussian_pyramid_cuda.cu  main.cpp  main.cu
cuda/tests/: CMakeLists.txt  README.md  compare_videos_frame_by_frame.cu  debug_cufft_minimal.cu  debug_cufft_r2c_match.cu  debug_frequency_mask.cu  test_butterworth_pipeline_comparison.cu  test_comprehensive_validation.cu  test_cpu_temporal_filter_comparison.cu  test_cuda_butterworth.cu  test_cuda_butterworth_simple.cu  test_cuda_color_conversion.cu  test_cuda_evm_pipeline.cu  test_cuda_laplacian_pyramid.cu  test_cuda_pyramid.cu  test_cuda_temporal_filter.cu  test_cuda_vs_cpu_color.cu  test_cuda_vs_cpu_pyramid.cu  test_cuda_vs_cpu_temporal.cu  test_cufft_step_by_step_validation.cu  test_gaussian_blur.cu
evmcpp/: CMakeLists.txt  README.md
evmcpp/include/evmcpu/: color_conversion.hpp  pyramid.hpp  temporal_filter.hpp
evmcpp/include/evmcuda/: color_conversion.cuh  pyramid.cuh  reconstruction.cuh  temporal_filter.cuh
evmcpp/src/evmcpu/: color_conversion.cpp  pyramid.cpp  temporal_filter.cpp
evmcpp/src/evmcuda/: color_conversion.cu  pyramid.cu  reconstruction.cu  temporal_filter.cu
evmcpp/tests/: CMakeLists.txt  test_butterworth.cpp  test_cpu_color.cpp  test_cpu_pyramid.cpp  test_cpu_temporal.cpp  test_cuda_color.cpp  test_cuda_pyramid.cpp  test_cuda_reconstruction.cpp  test_cuda_temporal.cpp  test_gaussian.cpp  test_helpers.cpp  test_helpers.hpp  test_laplacian.cpp  test_processing.cpp
evmcpp/tests/data/: butter_high_b.txt  butter_low_a.txt  butter_low_b.txt  frame_1_laplacian_level_2.txt  frame_2_filtered_level_2.txt  frame_2_filtered_level_3.txt  frame_2_laplacian_level_2.txt  frame_3_filtered_level_2.txt
include/evmcpp/: gaussian_pyramid.hpp  laplacian_pyramid.hpp
python/: generate_test_data.py
python/src/: gaussian_pyramid.py
src/: main.cpp
src/evmcpp/: butterworth.cpp  gaussian_pyramid.cpp  laplacian_pyramid.cpp  processing.cpp
tests/: test_gaussian.cpp
